src/test/deca/syntax/valid/provided/correct_lex.deca
// Description:
//    test de programme lexicalement correct.
//
je mange un oiseau
12*+-42
&& ><
"chaine"
0.6