src/test/deca/syntax/invalid/correct_lex.deca
// Description:
//    Programme lexicalement correct mais pas syntaxiquement
//
// Résultat:
//no viable alternative at input 'je'
//Succès pour test_lex
je mange un oiseau
12*+-42
&& ><
"chaine"
0.6